<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.liuting.ltingapp.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_txt_title"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

     <Button
         android:id="@+id/main_btn_popular_movies"
         android:layout_height="wrap_content"
         android:text="@string/main_btn_popular_movies"
         style="@style/main_btn_style"/>
    <Button
        android:id="@+id/main_btn_stock_hawk"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_stock_hawk"
        style="@style/main_btn_style"/>
    <Button
        android:id="@+id/main_btn_build"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_build"
        style="@style/main_btn_style"/>
    <Button
        android:id="@+id/main_btn_material"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_material"
        style="@style/main_btn_style"/>
    <Button
        android:id="@+id/main_btn_go_ubiquitous"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_go_ubiquitous"
        style="@style/main_btn_style"/>
    <Button
        android:id="@+id/main_btn_capstone"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_capstone"
        style="@style/main_btn_style"/>

</LinearLayout>
